--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,9 +8,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
-  <div class="div"></div>
-    <h1 class="head">My TOP 3 EDGELORDS</h1>
+    <div class="background">
+        <h1 class="Top3">Top 3 Video Games</h1>
+
+
+
+
+    </div>
+
+
+
+
+
+
+    <div class="Pkmn2">
+        <h2 class="Pkmn">Pokémon Trilogy</h2>
+    </div>
+
+
+
 
 </body>
+
+
 </html>
