--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
 </head>
 
 
@@ -19,17 +22,25 @@
 
     </div>
 
-
-
-
-
-
     <div class="Pkmn2">
         <h2 class="Pkmn">Pokémon Trilogy</h2>
+        <h2 class="knowledge">Pokémon is a Japanese media franchise consisting of video games, animated series and films, a trading card game, and other related media. The franchise takes place in a shared universe in which humans co-exist with creatures known as Pokémon, a large variety of species endowed with special powers.</h2>
     </div>
 
 
+    <div class="minecraft">
+        <h2 class="mc">Minecraft</h2>
+        <h2 class="mcknowledge">Minecraft is a highly popular sandbox video game that allows players to explore a blocky, procedurally generated world where they can gather resources, craft items, and build structures. It offers different modes, including Survival Mode where players must survive against hostile creatures, Creative Mode for unlimited building, and various educational applications. Its open-ended gameplay and massive player community have made it one of the best-selling and enduring games of all time.</h2>
+    </div>
 
+    <div class="Eldens">
+    <h2 class="Elden">Elden Ring</h2>
+    <h2 class="EldenKnowledge">"Elden Ring" is an action role-playing game developed by FromSoftware and published by Bandai Namco Entertainment. It is renowned for its collaboration between Hidetaka Miyazaki, the creator of "Dark Souls," and George R. R. Martin, the author of "A Song of Ice and Fire." Set in a dark and expansive open world, the game offers challenging combat, intricate lore, and a richly detailed fantasy setting, making it highly anticipated by gamers and fans of both Miyazaki and Martin's work.</h2>
+    </div>
+
+    <div class="DISCLAIMERS">
+         <h2 class="DISCLAIMER">DISCLAIMER THIS IS MY OPINION NO FLAME PLEASE!!!</h2>
+    </div>
 
 </body>
 
